tests/error/comprehension_errors/borrow_leaked2.err
Error: Drop violation (at $FILE:17:23)
   | 
15 | @guppy(module)
16 | def foo(qs: list[qubit] @owned) -> list[int]:
17 |     return [bar(q) for q in qs]
   |                        ^ Variable `q` with non-droppable type `qubit` is leaked

Guppy compilation failed due to 1 previous error
